prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/import_04.diag.txt
ERROR: expected 'identifier'
testData/diagnostics/import_04.nut:2:1

import "a" as

 ^


